<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/sms_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/massage"
        android:textColor="@color/redColor"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/to_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_number"
        android:inputType="number"
        android:imeOptions="actionSend"/>

    <EditText
        android:id="@+id/text_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_text"
        android:inputType="text"
        android:imeOptions="actionSend"/>
</LinearLayout>