<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmActivity"
    android:background="@drawable/wallpaper1"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/layoutColor1"
        android:backgroundTint="@color/whiteColor"
        android:gravity="center">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/alarm_add"
            android:textColor="@color/whiteColor"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/msg_alarm"
        android:textColor="@color/whiteColor"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView

        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/layoutColor1"
        card_view:cardCornerRadius="10dp">

        <Button
            android:id="@+id/button_alarm_time"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/alarm_time"
            android:layout_gravity="top|center"
            android:textColor="@color/whiteColor"
            android:background="@drawable/button_effect" />

        <LinearLayout
            android:id="@+id/linearLayout_alarm_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="57dp"
                    android:paddingTop="5dp"
                    android:text="@string/alarm_msg"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/msg_alarm"
                        android:layout_width="190dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:background="@drawable/scope_text"
                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button_add_alarm"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_alarm"
        android:layout_gravity="bottom|center"
        android:textColor="@color/whiteColor"
        android:background="@drawable/button_effect"
        />

</LinearLayout>