<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarActivity"
    android:background="@drawable/wallpaper1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/layoutColor1"
        android:backgroundTint="@color/whiteColor"
        android:gravity="center">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/calendar_add"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/whiteColor"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/msg_calender"
                android:textColor="@color/whiteColor"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ac_3_card_view"
                android:layout_width="340dp"
                android:layout_height="370dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/layoutColor1"
                card_view:cardBackgroundColor="@color/redColor"
                card_view:cardCornerRadius="10dp">

                <CalendarView
                    android:layout_width="340dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:dateTextAppearance="@style/CalenderViewDateCustomText"
                    android:theme="@style/CalenderViewCustom"
                    android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/calender">
                </CalendarView>

                <Button
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:text="@string/calendar_time_start"
                    android:textColor="@color/whiteColor"
                    android:id="@+id/button_calender_time_start"
                    android:layout_gravity="start|bottom|center"
                    android:background="@drawable/button_effect"
                    />

                <Button
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    android:text="@string/calendar_time_end"
                    android:textColor="@color/whiteColor"
                    android:id="@+id/button_calender_time_end"
                    android:layout_gravity="end|bottom|center"
                    android:background="@drawable/button_effect"
                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="340dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/layoutColor1"
                card_view:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/layout_scope_mail"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="103dp"
                            android:layout_height="match_parent"
                            android:paddingTop="5dp"
                            android:text="@string/text_subject"
                            android:textSize="20sp"
                            />

                        <LinearLayout
                            android:layout_width="185dp"
                            android:layout_height="40dp"
                            android:background="@drawable/scope_text"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/subject_edittext"
                                android:layout_width="170dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="5dp"
                                android:gravity="center"
                                android:hint="@string/enter_subject"
                                android:paddingTop="5dp" />
                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="103dp"
                            android:layout_height="match_parent"
                            android:textSize="20sp"
                            android:paddingTop="5dp"
                            android:text="@string/text_description"/>

                        <LinearLayout
                            android:layout_width="185dp"
                            android:layout_height="40dp"
                            android:orientation="horizontal"
                            android:background="@drawable/scope_text">

                            <EditText
                                android:id="@+id/description_edittext"
                                android:layout_width="170dp"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:layout_marginRight="5dp"
                                android:layout_marginLeft="10dp"
                                android:hint="@string/enter_description"/>
                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:text="@string/add_calendar"
                android:textColor="@color/whiteColor"
                android:id="@+id/button_add_calender"
                android:layout_gravity="bottom|center"
                android:background="@drawable/button_effect"
                />


        </LinearLayout>

    </ScrollView>


</LinearLayout>
