<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MailActivity"
    android:background="@drawable/wallpaper1"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/layoutColor1"
        android:backgroundTint="@color/whiteColor"
        android:gravity="center">

        <TextView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/daily_pay_calculator"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/whiteColor"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/msg_calculator"
                android:textColor="@color/whiteColor"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_number_hour"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                card_view:cardCornerRadius="10dp"
                android:backgroundTint="@color/layoutColor1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="160dp"
                            android:layout_height="match_parent"
                            android:paddingTop="5dp"
                            android:text="@string/a_faw_hours"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:layout_width="100dp"
                            android:layout_height="40dp"
                            android:background="@drawable/scope_text"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/a_faw_hours_cal"
                                android:layout_width="80dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="5dp"
                                android:inputType="number"
                                android:gravity="center"
                                android:paddingTop="5dp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_hourly_wage"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                card_view:cardCornerRadius="10dp"
                android:backgroundTint="@color/layoutColor1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="160dp"
                            android:layout_height="match_parent"
                            android:paddingTop="5dp"
                            android:text="@string/hourly_wage"
                            android:textSize="20sp"
                            />

                        <LinearLayout
                            android:layout_width="100dp"
                            android:layout_height="40dp"
                            android:background="@drawable/scope_text"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/hourly_wage_cal"
                                android:layout_width="80dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="5dp"
                                android:inputType="number"
                                android:gravity="center"
                                android:paddingTop="5dp"
                                />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/calculate"
                android:layout_width="115dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/calculate"
                android:textColor="@color/whiteColor"
                android:layout_gravity="bottom|center"
                android:background="@drawable/button_effect"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:id="@+id/amount_of_wages"
                android:layout_margin="20dp"
                android:textSize="18sp"
                android:textColor="@color/colorText"
                android:layout_gravity="center"
                android:textStyle="bold"
                />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
